<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp" />


    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:textColor="#000000"
        android:textSize="17sp" />


    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/price"
        android:textColor="#000000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/disc_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/discounted_price_leave_empty_if_not_applicable"
        android:textColor="#000000"
        android:textSize="17sp" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:textSize="15sp"
            android:text="@string/back"
            android:background="@color/grey"
            />

        <Button
            android:id="@+id/save"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:textSize="15sp"
            android:background="@color/colorAccent"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>