<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:theme="@style/SpinnerStyle" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/disc_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/discounted_price_leave_empty_if_not_applicable"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="17sp" />


        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey"
                android:text="@string/back"
                android:textSize="15sp" />

            <Button
                android:id="@+id/save"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>